<resources>
    <string name="app_name">Simple Forecasts</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="min">Min</string>
    <string name="search_info">Press the magnify button to search forecast in your city!</string>
    <string name="max">Max</string>
    <string name="search_hint">City name</string>
    <string name="menu_search">Search city</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp">Temp</string>
    <string name="minMax">Min / Max</string>
    <string name="feels_like">Feels like</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="clouds">Clouds</string>
    <string name="rain">Rain</string>
    <string name="rain_placeholder">-</string>
    <string name="visibility">Visibility</string>
</resources>