<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".main.ui.ForecastsFragment">

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="time" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:minWidth="100dp"
        android:minHeight="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/weather_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="Light Rain" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:gravity="center_horizontal"
        android:stretchMode="columnWidth"
        android:useDefaultMargins="true">

        <TextView
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="end"
            android:minWidth="90dp"
            android:text="@string/rain"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:minWidth="90dp"
            android:text="@string/rain_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="end"
            android:minWidth="90dp"
            android:text="@string/temp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:maxLines="1"
            android:minWidth="90dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Max" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="end"
            android:maxLines="1"
            android:minWidth="90dp"
            android:text="@string/minMax"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/minMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:minWidth="90dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Max" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="end"
            android:minWidth="90dp"
            android:text="@string/feels_like"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/feel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:minWidth="90dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Max" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="end"
            android:minWidth="90dp"
            android:text="@string/humidity"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:minWidth="90dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Max" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="end"
            android:minWidth="90dp"
            android:text="@string/pressure"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:minWidth="90dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Max" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="end"
            android:minWidth="90dp"
            android:text="@string/wind"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:minWidth="90dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Max" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="end"
            android:minWidth="90dp"
            android:text="@string/clouds"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/clouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:minWidth="90dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Max" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="end"
            android:minWidth="90dp"
            android:text="@string/visibility"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:minWidth="90dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            tools:text="Max" />

    </GridLayout>


</LinearLayout>